terraform/vpc.tf
# DEFAULT VPC for Project
resource "aws_vpc" "library_vpc" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "library_vpc"
  }
}

# IGW to Connect internet with VPC
resource "aws_internet_gateway" "library_vpc_internet_gateway" {
  vpc_id = aws_vpc.library_vpc.id

  tags = {
    Name = "library_vpc_igw"
  }
}

# PUBLIC SUBNET
resource "aws_subnet" "library_public_subnet" {
  vpc_id = aws_vpc.library_vpc.id
  cidr_block = "10.0.1.0/24"
  availability_zone = var.default_aws_region_az

  tags = {
    Name = "library_vpc_public_subnet"
  }
}

# ROUTE TABLE for VPC
resource "aws_route_table" "library_vpc_route_table" {
  vpc_id = aws_vpc.library_vpc.id

  # For outer route
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.library_vpc_internet_gateway.id
  }

  # For inner vpc route -> auto generated by aws

  tags = {
    Name = "library_vpc_rt"
  }
}

# Public Subnet에 Route Table 연결
resource "aws_route_table_association" "library_public_subnet_association" {
  subnet_id      = aws_subnet.library_public_subnet.id
  route_table_id = aws_route_table.library_vpc_route_table.id
}
